--- a/src/components/WeatherInfos.css
+++ b/src/components/WeatherInfos.css
@@ -29,7 +29,8 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-bottom: 1000px;
+  margin-top: -7vh;
+  padding-bottom: 239px;
   height: 100%;
   width: 100%;
   overflow: auto;
