--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,6 @@
 @import "https://fonts.googleapis.com/css?family=Lato:300";
 @import "https://cdnjs.cloudflare.com/ajax/libs/weather-icons/2.0.9/css/weather-icons.min.css";
-html,
-body,
+
 .background {
   width: 100%;
   height: 100%;
@@ -9,27 +8,13 @@ body,
   padding: 0;
   font-family: "Lato", sans-serif;
 }
-html {
-  background: #fff;
-}
-body {
-  background: #eee;
-  background: linear-gradient(0deg, rgba(0, 0, 200, 0.2), rgba(0, 0, 200, 0));
-}
-.background {
-  background: #eee;
-  background: linear-gradient(
-    120deg,
-    rgba(50, 150, 100, 0.2),
-    rgba(0, 0, 100, 0)
-  );
-}
+
 .container {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-bottom: 1000px;
+  padding-bottom: 80%;
   height: 100%;
   width: 100%;
   overflow: auto;
@@ -171,11 +156,12 @@ body {
   font-weight: 200;
 }
 .segmentdate {
+  position: fixed;
+  bottom: 10px;
+  left: 0px;
   font-family: "Gilroy ExtraBold", system-ui, sans-serif;
   color: rgb(255, 255, 255);
-  margin-top: -23vh;
   background: #cf959a;
-  width: 20%;
   border-top-right-radius: 22px;
   border-bottom-right-radius: 22px;
   padding: 0.5vh;
